feat: REST API server and real-time WebSocket sync (v3.0.0)

--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "lightweight"
   ],
   "author": "Omer (sehawq)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
+  }
 }
